# nebius-project

./: PLAN.md  README.md  REQUIREMENT.md  languages.yaml  pyproject.toml  setup.py
repo_summarizer/: __init__.py  context_assembler.py  language_registry.py  llm_client.py  logging_config.py  main.py  models.py  repository_ingestor.py  skeleton_parser.py
repo_summarizer/prompts/: system_prompt.txt
